Flickery screen fixes. Contact page. Routing fixes.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,10 @@ body {
   background-color: #dddddd;
 }
 
+h1 {
+  font-size: 1.5rem;
+}
+
 .slide-in-left-enter {
   transform: translateX(-100%);
 }
